# python_c_bazel

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  add_test.py
c_library/: BUILD.bazel  add.c  add.h
