package(default_visibility = ["//visibility:public"])

cc_library(
    name = "backend",
    srcs = ["add.c"],
    deps = [
        "@rules_python//python/cc:current_py_cc_headers",
    ],
)

cc_shared_library(
    name = "basic_lib",
    shared_lib_name = "basic.so",
    deps = [
        ":backend",
    ],
)

py_library(
    name = "basic_lib_py",
    data = [":basic_lib"],
    imports = [":basic_lib"],
)
